--- a/lounge.css
+++ b/lounge.css
@@ -13,8 +13,10 @@ h1,h2,h3 {
 #info {
     padding-left: 30px;
 }
-#name {
+.name {
     display:flex;
     align-items: center;
+}
+.avatar {
     margin-left: 8px;
 }
